--- a/src/theme/theme.css
+++ b/src/theme/theme.css
@@ -1,9 +1,10 @@
 .darkTheme {
-  --header: #2c2a2a;
+  --header: #000000;
   --white: #fff;
   --black: #000;
-  --pageContent: #232121;
-  --word: #fff;
+  --pageContent: #111111;
+  --word: #ffffff;
+  --work: #212122;
 }
 
 .lightTheme {
@@ -12,4 +13,5 @@
   --black: #000;
   --pageContent: #f5f3f0;
   --word: #000;
+  --work: #d8d8d8;
 }
